Refactored endpoints
